# realtime-order-processing

./: .gitignore  Dockerfile  README.md  docker-compose.yml
services/inventory_service/: Dockerfile  flyway.conf  pyproject.toml
services/inventory_service/migrations/: V1__create_initial_schema.sql
services/inventory_service/src/: database.py  db_service.py  kafka_service.py  main.py  migration_utils.py  models.py  routes.py  schemas.py
services/order_service/: Dockerfile  flyway.conf  pyproject.toml
services/order_service/migrations/: V1__create_initial_schema.sql
services/order_service/src/: config.py  db_service.py  kafka_service.py  main.py  models.py  routes.py  schemas.py
