[tool.poetry]
name = "order-service"
version = "0.1.0"
description = "Accepts orders from users and sends them to a Kafka topic."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kafka-python = "^2.0.2"
sqlalchemy = "^2.0.21"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
fastapi = {version = "^0.103.2"}
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"